--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   geocoding: ^2.1.0
   qrscan: ^0.3.3
   permission_handler:
+  google_maps_flutter: ^2.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,6 +65,8 @@ flutter:
   assets:
     - assets/info.jpeg
     - assets/recycle.png
+    - assets/icon_qr.png
+    - assets/icon_maps.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
