--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/recycle.png
     - assets/icon_qr.png
     - assets/icon_maps.png
+    - assets/icon_moblocation.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
