--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   permission_handler:
   google_maps_flutter: ^2.4.1
   http: ^0.13.3
+  lottie: ^2.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +70,8 @@ flutter:
     - assets/icon_qr.png
     - assets/icon_maps.png
     - assets/icon_moblocation.png
+    - assets/trash_car_anim.json
+    - assets/earth_anim.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
