--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/icon_process.png
     - assets/icon_feedback.png
     - assets/icon_feedbacks.png
+    - assets/icon_sanisoft.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
